added js functions to make game. added id's to html

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
         <body>
             <h1>The Psychic Game!!</h1>
             <h4>Guess what letter I'm thinking of</h4>
-            <h4>Wins:</h4>
-            <h4>Losses:</h4>
-            <h4>Guesses left:</h4>
-            <h4>Your guesses so far:</h4>
+            <h4 id="Wins">Wins:</h4>
+            <h4 id="Losses">Losses:</h4>
+            <h4 id="guessesLeft">Guesses left:</h4>
+            <h4 id="guessedLetters">Your guesses so far:</h4>
+
+            <script type="text/javascript" language="javascript" src="assets/javascript/game.js"></script> 
         </body>
     </head>
 </html>
